--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
       name="description"
       content="Track your gaming progress and discover new games to play"
     />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/logo_vg_new_192.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_vg_new_192.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/icon_192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon_192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
